# aitravel

./: .gitignore  README.md  docker-compose.aliyun.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  branding.py  env.py  main.py
backend/app/agent/: __init__.py  cards.py  checkpoints.py  context.py  middleware.py  presentation.py  runtime.py  service.py  streaming.py
backend/app/api/: __init__.py  auth.py  chat.py  connectors.py  deps.py  health.py  sessions.py  speech.py
backend/app/auth/: service.py  store.py
backend/app/connectors/: __init__.py  crypto.py  oauth.py  registry.py  runtime.py  service.py  store.py
backend/app/db/: __init__.py  bootstrap.py  migrate.py
backend/app/llm/: __init__.py  provider.py  qwen_chat_openai.py
backend/config/: connectors.example.json  mcp.servers.example.json
backend/migrations/: 001_auth_tables.sql  002_chat_core.sql  003_chat_versions.sql  004_chat_speech_assets.sql  005_chat_parts_status.sql  006_user_mcp_authorizations.sql
backend/tests/: test_agent_cards.py  test_agent_checkpoints.py  test_agent_presentation.py  test_agent_runtime_features.py  test_agent_service.py  test_agent_streaming.py  test_api.py  test_auth_api.py  test_auth_service.py  test_citations.py  test_connectors_crypto.py  test_connectors_oauth.py  test_db_migrate.py  test_env.py  test_exa_tools.py  test_langsmith_tracing.py  test_llm_provider.py  test_local_tools.py  test_mcp_client.py  test_mcp_config.py  test_qwen_chat_openai.py  test_speech_service.py  test_sqlite_store.py
docs/: claude流式输出.md  (+6 more)
(+103 files in other folders)
