[project]
name = "ai-travel-agent-backend"
version = "0.1.0"
description = "AI travel backend powered by LangChain, LangGraph and MCP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "PyJWT>=2.10.1,<3.0.0",
  "langchain==1.2.15",
  "langgraph==1.1.6",
  "langgraph-checkpoint-sqlite>=3.0.3,<4.0.0",
  "langchain-mcp-adapters==0.2.2",
  "langchain-openai>=0.3.30,<1.0.0",
  "langsmith>=0.7.25,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
